--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -56,7 +56,7 @@
                         <div style="min-width: 8px" ng-show="vm.subarray && $root.elementHasScrollbar('#scheduleDraftDataRepeat', true)"></div>
                     </div>
                 </md-toolbar>
-                <md-virtual-repeat-container id="scheduleDraftDataRepeat" md-theme="{{themePrimary}}" flex class="schedule-draft-data-list md-whiteframe-z2"
+                <md-virtual-repeat-container id="scheduleDraftDataRepeat" md-theme="{{themePrimary}}" flex class="md-whiteframe-z2"
                     ng-class="{'maintenance-bg':vm.subarray.maintenance}">
                     <div md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:vm.subarray.id, state:'DRAFT'} | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse"
                         flex layout="row" layout-align="start center" ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}"
@@ -111,7 +111,7 @@
                 <span flex style="margin-top: -5px;">Observations</span>
                 <div ng-include="'app/scheduler/templates/sb-scheduled-list-header.html'"></div>
             </md-toolbar>
-            <div ng-include="'app/scheduler/templates/sb-scheduled-list.html'"></div>
+            <div layout="column" style="min-height: 200px" ng-include="'app/scheduler/templates/sb-scheduled-list.html'"></div>
         </div>
     </div>
 
@@ -126,7 +126,7 @@
                     placeholder="Search Drafts..." />
             </div>
         </md-toolbar>
-        <md-virtual-repeat-container flex class="schedule-draft-data-list" flex>
+        <md-virtual-repeat-container flex flex>
             <div md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:null} | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:id_code:true"
                 title="{{item.id_code}} - {{item.description}} - {{item.type}} - {{item.desired_start_time}}"
                 ng-class="{'selected-resource-item': item.selected}" class="schedule-draft-item" layout="row"
