--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -14,7 +14,7 @@
                             <span style="margin-left: 14px;">
                                 SUBARRAY {{vm.subarray.id}} -
                                 <span><b>{{vm.subarray.state}}</b></span>
-                            <span ng-if="vm.subarray.maintenance">{{"- in maintenance"}}</span>
+                            <span ng-show="vm.subarray.maintenance">{{"- in maintenance"}}</span>
                             </span>
                         </md-button>
                         <md-menu-content style="padding: 8px;">
@@ -61,7 +61,7 @@
                     <div md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:vm.subarray.id, state:'DRAFT'} | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse"
                         flex layout="row" layout-align="start center" ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}"
                         class="schedule-draft-item" layout="column" ng-show="item">
-                        <md-progress-linear md-theme="grey" ng-if="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
+                        <md-progress-linear md-theme="grey" ng-show="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
                             md-mode="indeterminate" style="position: absolute; left: 0; right: 0;">
                         </md-progress-linear>
                         <div layout="column" layout-align="center start" style="min-width: 100px; max-width: 100px; margin-left: 4px">
@@ -98,7 +98,7 @@
                     </div>
                 </md-virtual-repeat-container>
             </div>
-            <md-button md-theme="{{themePrimaryButtons}}" class="md-raised md-primary" style="min-height: 100%; max-width: 41px; min-width: 41px; margin: 0 4px 0 8px"
+            <md-button md-theme="{{themePrimaryButtons}}" class="md-raised md-primary" style="min-height: 100%; max-width: 41px; min-width: 41px; margin: 2px 0 0 4px"
                 ng-disabled="!parent.vm.iAmAtLeastCA() || vm.selectedSBs.length === 0" ng-click="vm.assignSelectedScheduleBlocks()"
                 title="Assign Schedule Blocks to Subarray">
                 <md-icon class="fa" md-font-icon="fa-chevron-left" style="width: auto; height: auto;"></md-icon>
